@@ -3,7 +3,7 @@
 Plugin Name: Flexo Archives
 Description: Displays archives as a list of years that expand when clicked
 Author: Heath Harrelson
-Version: 2.0.2
+Version: 2.0.3
 Plugin URI: http://wordpress.org/extend/plugins/flexo-archives-widget/
 */
 
@@ -54,6 +54,68 @@ function flexo_widget_archives_init () {
 }
 
 /**
+ * Register the configuration page for the standalone function
+ */
+function flexo_archives_menu () {
+	$page_title = __('Standalone Flexo Archives Options');
+	$menu_title = __('Flexo Archives');
+	$menu_slug  = 'flexo-archvies-options';
+
+	add_options_page($page_title, $menu_title, 'manage_options', $menu_slug,
+	                 'flexo_archives_options');
+}
+
+/**
+ * Output plugin configuration page
+ */
+function flexo_archives_options () {
+	if (!current_user_can('manage_options')) {
+		wp_die(__('You do not have sufficient priveleges to access this page.'));
+	}
+
+	// form submitted
+	$options = $newoptions = get_option('widget_flexo');
+	if ( !empty($_POST["flexo-submit"]) &&
+	     check_admin_referer('flexo-archives-options-page') )
+	{
+		$newoptions['standalone'] = isset($_POST['flexo-standalone']);
+		$newoptions['animate'] = isset($_POST['flexo-animate']);
+	}
+
+	// save if options changed
+	if ( $options != $newoptions ) {
+		$options = $newoptions;
+		update_option('widget_flexo', $options);
+	}
+
+	$standalone = $options['standalone'] ? 'checked="checked"' : '';
+	$animate = $options['animate'] ? 'checked="checked"' : '';
+
+?>
+<div class="wrap">
+  <h2><?php _e('Standalone Flexo Archives Options'); ?></h2>
+  <div class="narrow">
+  <p><?php _e('These options are only relevant to users who cannot use or do not want to use the sidebar widget. If you are using the widget, then you should ignore the following settings.'); ?></p>
+  <p><?php _e('To use the standalone version of the archives, check the "enable standalone theme function" box below, and then add the following code your theme where you want the expandable archive lists to be:'); ?></p>
+
+  <code>&lt;?php if (function_exists('flexo_standalone_archives')){ flexo_standalone_archives(); } ?&gt;</code>
+
+  <p><?php _e('The code will output the nested archive lists into the HTML at that point in the theme. JavaScript automatically attached to the pages generated by WordPress will make the lists expand and collapse.'); ?></p>
+
+  <h3><?php _e('Change Options'); ?></h3>
+
+  <form name="flexo-options-form" method="post" action="">
+    <?php wp_nonce_field('flexo-archives-options-page'); ?>
+    <p><label for="flexo-standalone"><input type="checkbox" class="checkbox" id="flexo-standalone" name="flexo-standalone" <?php echo $standalone; ?>/> <?php _e('enable standalone theme function'); ?></label></p>
+    <p><label for="flexo-animate"><input type="checkbox" class="checkbox" id="flexo-animate" name="flexo-animate" <?php echo $animate; ?>/> <?php _e('animate collapsing and expanding lists'); ?></label></p>
+    <input type="submit" name="flexo-submit" class="button-primary" value="<?php _e('Submit'); ?>"/>
+  </form>
+  </div>
+</div>
+<?php
+}
+
+/**
  * Handle widget configuration
  */
 function flexo_widget_archives_control () {
@@ -100,7 +162,7 @@ function flexo_year_start ($year = '') {
  *
  * Returns: result of query if successful, null otherwise
  */
-function flexo_get_archives () {
+function flexo_query_archives () {
 	global $wpdb;
 
 	// Query string
@@ -124,6 +186,109 @@ function flexo_get_archives () {
 }
 
 /**
+ * Constructs the nested unordered lists from data obtained from
+ * the database.
+ *
+ * Returns: An HTML fragment containing the archives lists
+ */
+function flexo_build_archives_list () {
+	global $wp_locale;
+	$list_html = "";
+
+	// Get archives from database
+	$results = flexo_query_archives();
+
+	// Log and retrun an error if query failed.
+	if (is_null($results)) {
+		$error_str = __('Database query unexpectedly failed.');
+		error_log(__('ERROR: ') . __FILE__ . '(' . __LINE__ . ') ' .
+			  $error_str);
+		return "<p>$error_str</p>";
+	}
+	
+	// Detect year change in loop.
+	$a_year = '0';
+
+	// Loop over results and print our archive lists
+	foreach ($results as $a_result) {
+		$before = '';
+		$after = '';
+
+		if ($a_result->year != $a_year) {
+			// If not first iteration, close previous list
+			if ($a_year != '0')
+				$list_html .= '</ul></li></ul>';
+
+			$a_year = $a_result->year;
+			$list_html .= flexo_year_start($a_result->year) . "\n";
+		}
+
+		$url = get_month_link($a_result->year, $a_result->month);
+		$text = sprintf(__('%1$s'), $wp_locale->get_month($a_result->month));
+
+		// Append number of posts in month, if they want it
+		if ($count)
+			$after = '&nbsp;(' . $a_result->posts . ')' . $after;
+
+		$list_html .= get_archives_link($url, $text, 'html', $before, $after);
+	}
+
+	// Close the last list
+	$list_html .= '</ul></li></ul>';
+
+	return $list_html;
+}
+
+/**
+ * Output the archive list as a sidebar widget
+ *
+ * Arguments: $args array passed by WordPress's widgetized sidebar code
+ */
+function flexo_widget_archives ($args) {
+	extract($args);
+
+	// Fetch widget options
+	$options = get_option('widget_flexo');
+	$title = empty($options['title']) ? __('Archives') : $options['title'];
+	$count = $options['count'] ? '1' : '0';
+
+	// Print out the title
+	echo $before_widget; 
+	echo $before_title . $title . $after_title;
+
+	// Print out the archive list
+	echo flexo_build_archives_list();
+
+	// Close out the widget
+	echo $after_widget; 
+}
+
+/**
+ * Attach JavaScript to normal pages if the standalone archives function
+ * is enabled
+ */
+function flexo_enqueue_standalone () {
+	$options = get_option('widget_flexo');
+
+	if (is_null($options['standalone'])) {
+		$options['standalone'] = false;
+	}
+
+	if (!is_admin() && $options['standalone']) {
+		wp_enqueue_script('jquery');
+		wp_enqueue_script('flexo', flexo_script_url(), array('jquery'),
+				  '2.0');
+	}
+}
+
+/**
+ * Output the archive lists as a standalone function
+ */
+function flexo_standalone_archives () {
+	echo flexo_build_archives_list();
+}
+
+/**
  * Helper function that prints the url for our javascript
  */
 function flexo_script_url () {
@@ -137,61 +302,6 @@ function flexo_script_url () {
 	}
 
 	return $url;
-}
-
-/**
- * Output the archive list as a sidebar widget
- *
- * Arguments: $args array passed by WordPress's widgetized sidebar code
- */
-function flexo_widget_archives ($args) {
-	global $wp_locale;
-	extract($args);
-
-	// Fetch widget options
-	$options = get_option('widget_flexo');
-	$title = empty($options['title']) ? __('Archives') : $options['title'];
-	$count = $options['count'] ? '1' : '0';
-
-	// Print out the title
-	echo $before_widget; 
-	echo $before_title . $title . $after_title;
-
-	// Get database results
-	$results = flexo_get_archives();
-	
-	// Detect year change in loop.
-	$a_year = '0';
-
-	// Loop over results and print our archive lists
-	foreach ($results as $a_result) {
-		$before = '';
-		$after = '';
-
-		if ($a_result->year != $a_year) {
-			// If not first iteration, close previous list
-			if ($a_year != '0')
-				echo '</ul></li></ul>';
-
-			$a_year = $a_result->year;
-			echo flexo_year_start($a_result->year) . "\n";
-		}
-
-		$url = get_month_link($a_result->year, $a_result->month);
-		$text = sprintf(__('%1$s'), $wp_locale->get_month($a_result->month));
-
-		// Append number of posts in month, if they want it
-		if ($count)
-			$after = '&nbsp;(' . $a_result->posts . ')' . $after;
-
-		echo get_archives_link($url, $text, 'html', $before, $after);
-	}
-
-	// Close the last list
-	echo '</ul></li></ul>';
-
-	// Close out the widget
-	echo $after_widget; 
 }
 
 /**
@@ -216,7 +326,7 @@ function flexo_widget_register () {
 	}
 
 	// Register the function to delete options on uninstall
-	register_uninstall_hook(__FILE__, 'flexo_widget_uninstall');
+	register_uninstall_hook(__FILE__, 'flexo_archives_uninstall');
 
 	// Add CSS and JavaScript to header if we're active
 	if (is_active_widget('flexo_widget_archives')) {
@@ -228,7 +338,7 @@ function flexo_widget_register () {
 /**
  * Uninstall Function. Deletes plugin configuration from the database.
  */
-function flexo_widget_uninstall () {
+function flexo_archives_uninstall () {
 	$options = get_option('widget_flexo');
 
 	if (is_array($options)) {
@@ -237,6 +347,8 @@ function flexo_widget_uninstall () {
 }
 
 // Delay plugin execution until sidebar is loaded
+add_action('init', 'flexo_enqueue_standalone');
+add_action('admin_menu', 'flexo_archives_menu');
 add_action('widgets_init', 'flexo_widget_archives_init');
 
 ?>
